packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__variable_assignment__            let x  = (1 __ 1);            x __= (1 + 1);            .snap
---
source: packages/llvm/src/tests/variable_declaration/variable_assignment.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %"x|_|" = alloca double, align 8
  store double 1.000000e+00, double* %"x|_|", align 8
  %"6" = load double, double* %"x|_|", align 8
  %"7" = fdiv double %"6", 2.000000e+00
  store double %"7", double* %"x|_|", align 8
  ret void
}

